# FoodOrbit

./: .gitignore  AIAssistant.h  CMakeLists.txt  Interface_Livreur.cpp  Interface_Livreur.h  Interface_Livreur.ui  Interface_Restaurant.cpp  Interface_Restaurant.h  Interface_Restaurant.ui  LICENSE  README.md  client.cpp  client.h  clientwindow.cpp  clientwindow.h  clientwindow.ui  database.cpp  database.h  languagemanager.cpp  languagemanager.h  languagemanager.ui  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.ui  newpasswordwindow.cpp  newpasswordwindow.h  ordervalidator.cpp  ordervalidator.h  resetwindow.cpp  resetwindow.h  resetwindow.ui  style.h  utilisateur.cpp  utilisateur.h
translations/: app_ar.ts  app_en.ts  app_fr.ts
